Fix Railway database configuration